# fastapi-tutorial

./: README.md  pyproject.toml  todos.db  todosapp.db
fastapi_tutorial/: database.py  main.py  models.py
fastapi_tutorial/routers/: admin.py  auth.py  todos.py  users.py
notebooks/: 01_http_requests.py  02_validation.py
