[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Pakhapoom <pakhapoom.sar@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.3"
uvicorn = "^0.23.1"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
known_fastapi = ["fastapi", "starlette"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "FIRSTPARTY",
    "THIRDPARTY",
    "LOCALFOLDER",
]
import_heading_future = "import: future"
import_heading_stdlib = "import: standard"
import_heading_fastapi = "import: fastapi"
import_heading_firstparty = "import: internal"
import_heading_thirdparty = "import: external"
import_heading_localfolder = "import: private"
force_single_line = "true"
include_trailing_comma = "true"
line_length = 90